[workspace]
resolver = "2"
members = [
    ".",
    "./libs/badge",
]

[package]
name = "shiny-robots"
version = "0.1.0"
authors = ["Sam Rijs <srijs@airpost.net>"]
edition = "2021"

[dependencies]
badge = { path = "./libs/badge" }

actix-web = "4"
actix-web-lab = "0.24"
anyhow = "1"
crates-index = { version = "3", default-features = false, features = ["git", "git-https-reqwest"] }
# to be kept in sync with the version used by `crates-index`
gix = { version = "0.71", default-features = false }
derive_more = { version = "2", features = ["display", "error", "from"] }
dotenvy = "0.15"
either = "1.12"
font-awesome-as-a-crate = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
indexmap = { version = "2", features = ["serde"] }
lru_time_cache = "0.11"
maud = "0.27"
mime = "0.3"
parking_lot = "0.12"
pulldown-cmark = "0.13"
relative-path = { version = "1", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
rustsec = { git = "https://github.com/rustsec/rustsec.git" }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
serde_with = "3"
tokio = { version = "1.44.2", features = ["rt", "macros", "sync", "time"] }
toml = "0.8"
tracing = "0.1.30"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
grass = { version = "0.13", default-features = false }
sha-1 = "0.10"
