[workspace]
resolver = "2"
members = [
    ".",
    "./libs/badge",
]

[package]
name = "shiny-robots"
version = "0.1.0"
authors = ["Sam Rijs <srijs@airpost.net>"]
edition = "2024"

[dependencies]
badge = { path = "./libs/badge" }

actix-web = { version = "4", default-features = false, features = ["macros", "compress-gzip", "compress-zstd", "http2", "unicode", "compat"] }
actix-web-lab = { version = "0.24", default-features = false }
anyhow = "1"
crates-index = { version = "3", default-features = false, features = ["git", "git-https-reqwest"] }
# to be kept in sync with the version used by `crates-index`
gix = { version = "0.73", default-features = false }
derive_more = { version = "2", features = ["display", "error", "from"] }
dotenvy = "0.15"
either = "1.12"
font-awesome-as-a-crate = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
indexmap = { version = "2", features = ["serde"] }
lru_time_cache = "0.11"
maud = "0.27"
mime = "0.3"
parking_lot = "0.12"
pulldown-cmark = "0.13"
relative-path = { version = "2", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "http2", "json"] }
rustsec = "0.31"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
serde_with = "3"
tokio = { version = "1.44.2", features = ["rt", "macros", "sync", "time"] }
toml = { version = "0.9", default-features = false, features = ["parse", "serde", "preserve_order"] }
tracing = "0.1.30"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
grass = { version = "0.13", default-features = false }
sha-1 = "0.10"
