[package]
name = "badge"
version = "0.2.0"
description = "Simple badge generator"
authors = ["Onur Aslan <onur@onur.im>"]
license-file = "LICENSE"
repository = "https://github.com/onur/docs.rs"
documentation = "https://docs.rs/badge"

[lib]
path = "badge.rs"

[dependencies]
base64 = "0.9.0"
lazy_static = "1.0.0"
rusttype = "0.5.0"
