[package]
name = "badge"
version = "0.2.0"
description = "Simple badge generator"
authors = ["Onur Aslan <onur@onur.im>"]
license-file = "LICENSE"
repository = "https://github.com/onur/docs.rs"
documentation = "https://docs.rs/badge"
edition = "2021"

[lib]
path = "badge.rs"

[dependencies]
base64 = "0.13"
once_cell = "1"
rusttype = "0.9"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_urlencoded = "0.7"
